--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@CHARSET "UTF-8"; 
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css); 
+@import url(http://fonts.googleapis.com/earlyaccess/hanna.css); 
+.hanna { font-family: 'hanna'; } 
+.nanum { font-family: 'Nanum Barun Gothic'; } 
+
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i,700,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i,700,900&display=swap");
 /* line 1, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_extend.scss */
