--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -1,3 +1,10 @@
+
+@CHARSET "UTF-8"; 
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css); 
+@import url(http://fonts.googleapis.com/earlyaccess/hanna.css); 
+.hanna { font-family: 'hanna'; } 
+.nanum { font-family: 'Nanum Barun Gothic'; } 
+
 /* 1. Theme default css */
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i,700,900&display=swap");
 /* line 5, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/theme-default.scss */
@@ -6,6 +13,7 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
 
 /* line 12, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/theme-default.scss */
 .img {
